fix: Incorrect alignment of light bulb when word wrap is enabled

--- a/app/javascript/scss/editor/_codemirror-6.scss
+++ b/app/javascript/scss/editor/_codemirror-6.scss
@@ -274,13 +274,12 @@
 
 .indented-wrapped-line {
   --text-indent-multiplier: -1.5;
+  margin-left: calc(var(--indented));
+  text-indent: calc(var(--text-indent-multiplier) * var(--indented));
 
   .is-firefox & {
     --text-indent-multiplier: -1;
   }
-
-  margin-left: calc(var(--indented));
-  text-indent: calc(var(--text-indent-multiplier) * var(--indented));
 
   &.cm-activeLine {
     box-shadow: calc((-1 * var(--indented)) + 4px) 0 0 rgba($white, 0.025)
@@ -290,5 +289,10 @@
     &::before {
       left: calc(var(--indented) * -1);
     }
+  }
+
+  button,
+  .button {
+    text-indent: 0;
   }
 }
